# Langchain-study

./: README.md  hello.ipynb  pyproject.toml  test.py
lesson/1/2/: lesson2.ipynb
lesson/1/2-3.29/: lesson2.ipynb
lesson/1/3-3.30/: lesson3.ipynb
lesson/3.28/: hello.ipynb
lesson/3.31/: 5.2自定义tools.ipynb  5.3预定义tools.ipynb  tools.ipynb
lesson/4.1/: 6.2.1InMemorySaver copy.ipynb  6.3.2修剪消息.ipynb  6.3.2总结消息.ipynb
lesson/4.3/: 动态提示词.ipynb  总结消息.ipynb  流式传输.ipynb
lesson/4.5/: langgraph工作流与智能体.ipynb
